# clash2feedback_gc

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
configs/: AGENTS.md  README.md  phase0.yaml  phase1_clash_detector.yaml  phase2_5_model_induced_audit.yaml  phase2_injection.yaml  phase3_label_provenance_audit.yaml  phase4_0_1_diffsbdd_conditional_repair.yaml  phase4_0_1a_local_reconnect_calibration.yaml  phase4_0_1a_visual_qc.yaml  phase4_0_backend_feasibility.yaml
data/: AGENTS.md  README.md
docs/: 20260504-01-Clash2Feedback-GC_完整方案与升级路线.md  20260504-02-Clash2Feedback-GC_第一篇论文实验方案.md  20260504-03-Clash2Feedback-GC_总体实验递进路线.md  20260505-Clash2Feedback-GC_阶段0工程方案.md  20260508-Clash2Feedback-GC_阶段1碰撞检测器与可靠验证器方案.md  20260510-Clash2Feedback-GC_阶段2人工局部碰撞注入最终落地方案.md  20260511-Clash2Feedback-GC_阶段2.5模型诱导失败外部有效性审计落地方案.md  20260511-Clash2Feedback-GC_阶段2最终实验报告.md  20260513-Clash2Feedback-GC_阶段3标签溯源循环风险审计与阶段4掩码种子生成方案总纲.md  20260514-Clash2Feedback-GC_阶段4.0多后端参考掩码修复可行性审计方案总纲.md  20260517-Clash2Feedback-GC_阶段4.0.1-DiffSBDD条件局部补全修补方案总纲.md  20260517-Clash2Feedback-GC_阶段4.0.1a局部接回诊断规则校准方案总纲.md  AGENTS.md  README.md  external_baselines.md
reports/: AGENTS.md  README.md
runs/: .gitignore  AGENTS.md  README.md
scripts/: AGENTS.md  README.md  phase0_build_processed.py  phase0_check_dataset.py  phase0_generate_visual_check_assets.py  phase0_make_balanced_manifest.py  phase0_make_splits.py  phase0_prepare_crossdocked_subset.py  phase0_prepare_diffsbdd_examples.py  phase0_render_visual_check_images.py  phase1_check_clashes.py  phase2_5_model_induced_audit.py  (+10 more)
(+288 files in other folders)
